fix: 오타 수정 [SSF-2]

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,7 +37,7 @@ jobs:
           username: ${{ secrets.USERNAME_4800H }}
           key: ${{ secrets.PRIVATE_KEY }}
           source: "./dist, ./conf, ./docker-compose.yml"
-          target: "~/prod/imf"
+          target: "~/prod/ssf"
       
 
 
