--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
